quoting-CypressTK1/force-app/main/default/objects/Task__c/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <formula
	>IF(TEXT(ActivityGroupId__r.PhaseId__r.Sequence__c)&lt;&gt; &apos;0&apos; &amp;&amp;  ActivityGroupId__r.EstimateId__r.UseProjectPhases__c == true,  
TEXT(ActivityGroupId__r.PhaseId__r.Sequence__c) + &apos;.&apos;, '') + TEXT(ActivityId__r.ActivityGroupId__r.Sequence__c) +&apos;.&apos; + TEXT(ActivityId__r.Sequence__c) +&apos;.&apos; +  TEXT(Sequence__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Path</label>
    <type>Text</type>
</CustomField>