quoting-CypressTK1/force-app/main/default/objects/Task__c/fields/ResourceRoleId__c.field-meta.xml
<CustomField>
    <fullName>ResourceRoleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Role</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Resource Role</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>